poke/testsuite/poke.pkl/cast-struct-diag-1.pk
/* { dg-do compile } */

deftype Packet = struct { };

defvar x = 10 as Packet; /* { dg-error "expected struct" } */
